// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardHeader renders with base props 1`] = `
<article
  className="lab-card-header"
/>
`;

exports[`CardHeader renders with categoryColor 1`] = `
<article
  className="lab-card-header"
>
  <p
    className="lab-card-category"
  >
    <span
      className="lab-card-category__color lab-card-category__color--mineral"
    />
  </p>
</article>
`;

exports[`CardHeader renders with categoryIcon 1`] = `
<article
  className="lab-card-header"
>
  <p
    className="lab-card-category"
  >
    <span
      className="lab-icon lab-icon--star"
    />
  </p>
</article>
`;

exports[`CardHeader renders with categoryLabelText 1`] = `
<article
  className="lab-card-header"
>
  <p
    className="lab-card-category"
  >
    <span
      className="lab-tag  lab-tag--pale"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    >
      test
    </span>
  </p>
</article>
`;

exports[`CardHeader renders with categoryText 1`] = `
<article
  className="lab-card-header"
>
  <p
    className="lab-card-category"
  >
    <span
      className="lab-card-category__text"
    >
      test
    </span>
  </p>
</article>
`;

exports[`CardHeader renders with isOverlay 1`] = `
<article
  className="lab-card-header lab-card-header--overlay"
/>
`;

exports[`CardHeader renders with subtitle 1`] = `
<article
  className="lab-card-header"
>
  <p
    className="lab-card-subtitle"
  >
    test
  </p>
</article>
`;

exports[`CardHeader renders with subtitleClassName 1`] = `
<article
  className="lab-card-header"
/>
`;

exports[`CardHeader renders with title 1`] = `
<article
  className="lab-card-header"
>
  <p
    className="lab-card-title"
  >
    test
  </p>
</article>
`;

exports[`CardHeader renders with titleClassName 1`] = `
<article
  className="lab-card-header"
/>
`;
